# kernel_devices_google_comet

./: BUILD.bazel  Kconfig.ext  build.config.comet  build.config.comet.gki.fragment  build_comet.sh  comet_defconfig  comet_gki.fragment  device.bazelrc  vendor_kernel_boot_modules.comet
display/: BUILD.bazel  Kbuild  Makefile  panel-google-ak3a.c  panel-google-ct3a.c  panel-google-ct3b.c  panel-google-ct3c.c  panel-google-ct3d.c  panel-google-ct3e.c  panel-gs-ct3a.c  panel-gs-ct3b.c  panel-gs-ct3c.c  panel-gs-ct3d.c  panel-gs-ct3e.c
dts/: BUILD.bazel
dts/google/: Makefile  zuma-comet-aoc.dtsi  zuma-comet-audio-dev1.dtsi  zuma-comet-audio-ti.dtsi  zuma-comet-audio.dtsi  zuma-comet-battery-common.dtsi  zuma-comet-battery-data.dtsi  zuma-comet-battery-dev.dtsi  zuma-comet-battery.dtsi  zuma-comet-bcl.dtsi  zuma-comet-bluetooth.dtsi  zuma-comet-board.dtsi  zuma-comet-camera-dev1.dtsi  zuma-comet-camera-pmic-dev1.dtsi  zuma-comet-camera-pmic.dtsi  zuma-comet-camera.dtsi  zuma-comet-charging-common.dtsi  zuma-comet-charging-dev.dtsi  zuma-comet-charging.dtsi  zuma-comet-common.dtsi  zuma-comet-connector.dtsi  zuma-comet-dev1.dts  zuma-comet-display-dev1.dtsi  zuma-comet-display.dtsi  zuma-comet-ese.dtsi  zuma-comet-fingerprint-dev1.dtsi  zuma-comet-fingerprint.dtsi  zuma-comet-hall-sensor.dtsi  zuma-comet-haptics-dev1.dtsi  zuma-comet-haptics.dtsi  zuma-comet-nfc.dtsi  zuma-comet-outer-common-touch.dtsi  zuma-comet-outer-touch-dev1.dtsi  zuma-comet-outer-touch-proto1.dtsi  zuma-comet-outer-touch.dtsi  zuma-comet-pmic.dtsi  zuma-comet-proto1-broadcom-gnss.dts  zuma-comet-proto1-samsung-gnss.dts  zuma-comet-proto1_1-broadcom-gnss.dts  zuma-comet-proto1_1-samsung-gnss-wingboard.dts  (+40 more)
insmod_cfg/: init.insmod.comet.cfg
