# SPDX-License-Identifier: GPL-2.0-or-later

load("//build/kernel/kleaf:kernel.bzl", "kernel_module")

kernel_module(
    name = "drm_panel.google",
    srcs = glob([
        "**/*.c",
        "**/*.h",
    ]) + [
        "Kbuild",
    ] + [
        "//private/google-modules/display/common:headers",
        "//private/google-modules/display/samsung:headers",
        "//private/google-modules/display/samsung/include:headers",
        "//private/google-modules/soc/gs:gs_soc_headers",
    ],
    outs = [
        # keep sorted
        "panel-google-ct3c.ko",
        "panel-google-ct3e.ko",
        "panel-gs-ct3a.ko",
        "panel-gs-ct3b.ko",
        "panel-gs-ct3d.ko",
    ],
    kernel_build = "//private/google-modules/soc/gs:gs_kernel_build",
    visibility = [
        "//private/devices/google:__subpackages__",
        "//private/google-modules/soc/gs:__pkg__",
    ],
    deps = [
        "//private/google-modules/display/common/gs_panel",
        "//private/google-modules/display/samsung:display.samsung",
        "//private/google-modules/soc/gs:gs_soc_module",
    ],
)
